# swig-fortran-dev

./: .gitignore  README.md  build.sh  rcp-sketch.f90  test.f90
SWIG.qvnotebook/: meta.json
array_typemaps/: CMakeLists.txt  code.cc  code.hh  code.i  test.f90
bare_function/: CMakeLists.txt  bare.cc  bare.hh  bare.i  foo.hh  foo.i  fortran.sh  gen.sh  test.f90
cmake/: SwigModules.cmake  UseSWIG.cmake  config.cmake
hypothetical_vec/: hypothetical.f90
new_vec/: gen.sh  vec.i
openacc/: build.sh  cudart.i  curand.i  debug.pbs  generate.sh  make.sh  swig-debug.o3926940  test_thrustacc.f90  thrustacc.f90  thrustacc.i  thrustacc_wrap.cu  thrustacc_wrap.cxx
other_interfaces/: Vec.h  Vec_DblInterface.cpp
parameterlist/: CMakeLists.txt  Teuchos_Array.i  Teuchos_ArrayView.i  Teuchos_Comm.i  Teuchos_ParameterList.i  Teuchos_RCP.i  Teuchos_Traits.i  Teuchos_XML.i  install-trilinos.sh  test.f90  teuchos.i
scale_vec/: Vec_Dbl.cpp2f.xml  Vec_DblInterface.h  Vec_Dbl_I.f90  Vec_Dbl_M.f90  tstVecFortran.f90
simple_class/: CMakeLists.txt  SimpleClass.cc  SimpleClass.hh  simple.i  simple_wrap.cxx  test.f90
std_string/: CMakeLists.txt  stdstr.cc  stdstr.hh  stdstr.i  test.f90
std_vector/: CMakeLists.txt  gen.sh  stdvec.cc  stdvec.hh  stdvec.i  test.f90
swig-failures/: failing-tests-1.mk  failing-tests-10.mk  failing-tests-2.mk  failing-tests-3.mk  failing-tests-4.mk  failing-tests-5.mk  failing-tests-6.mk  failing-tests-7.mk  failing-tests-8.mk  failing-tests-9.mk  failing-tests.mk  process-failures.ipynb
swigbug/: feature.i  feature.py  feature_wrap.c  issue53.f90  (+2 more)
(+157 files in other folders)
